unpackaged/main/default/objects/Partner_Integration_Offered__c/Partner_Integration_Offered__c.object-meta.xml
<CustomObject>
    <label>Partner Integration (Offered)</label>
    <nameField>
        <label>Partner Integration (Offered) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Integrations (Offered)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>