unpackaged/main/default/objects/Partner_Integration_Offered__c/fields/APIs_Used__c.field-meta.xml
<CustomField>
    <fullName>APIs_Used__c</fullName>
    <label>APIs Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analytics API</fullName>
            </value>
            <value>
                <fullName>CMS API</fullName>
            </value>
            <value>
                <fullName>Data Collection API</fullName>
            </value>
            <value>
                <fullName>Dynamic Ingest API</fullName>
            </value>
            <value>
                <fullName>In-Page Experience API</fullName>
            </value>
            <value>
                <fullName>Live API</fullName>
            </value>
            <value>
                <fullName>Playback API</fullName>
            </value>
            <value>
                <fullName>Player Management API</fullName>
            </value>
            <value>
                <fullName>Policy API</fullName>
            </value>
            <value>
                <fullName>SSAI API</fullName>
            </value>
            <value>
                <fullName>Web Player SDK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>