unpackaged/main/default/objects/Partner_Integration_Offered__c/fields/Brightcove_Components__c.field-meta.xml
<CustomField>
    <fullName>Brightcove_Components__c</fullName>
    <label>Brightcove Components</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brightcove Beacon</fullName>
            </value>
            <value>
                <fullName>Brightcove Campaign</fullName>
            </value>
            <value>
                <fullName>Brightcove Gallery</fullName>
            </value>
            <value>
                <fullName>Brightcove Live</fullName>
            </value>
            <value>
                <fullName>Brightcove Social</fullName>
            </value>
            <value>
                <fullName>Brightcove Video Cloud</fullName>
            </value>
            <value>
                <fullName>Brightcove Web Player</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>