unpackaged/main/default/objects/Partner_Integration_Offered__c/fields/Brightcove_Integration_Point__c.field-meta.xml
<CustomField>
    <fullName>Brightcove_Integration_Point__c</fullName>
    <label>Brightcove Integration Point</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertising API</fullName>
            </value>
            <value>
                <fullName>Analytics API</fullName>
            </value>
            <value>
                <fullName>Android SDK</fullName>
            </value>
            <value>
                <fullName>BEML</fullName>
            </value>
            <value>
                <fullName>Brightcove Player API</fullName>
            </value>
            <value>
                <fullName>CMS API</fullName>
            </value>
            <value>
                <fullName>Dynamic Ingest API</fullName>
            </value>
            <value>
                <fullName>iOS SDK</fullName>
            </value>
            <value>
                <fullName>Media API</fullName>
            </value>
            <value>
                <fullName>Smart Player API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>