unpackaged/main/default/objects/Partner_Integration_Offered__c/fields/Enterprise_Solution__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Solution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enterprise Solution</label>
    <type>Checkbox</type>
</CustomField>