unpackaged/main/default/objects/Partner_Integration_Offered__c/fields/Integration_Solution_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Solution_Type__c</fullName>
    <label>Integration Solution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connector</fullName>
            </value>
            <value>
                <fullName>Service and Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>