unpackaged/main/default/objects/Partner_Integration_Offered__c/fields/Integrator__c.field-meta.xml
<CustomField>
    <fullName>Integrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integrator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Integrations (Offered)</relationshipLabel>
    <relationshipName>Partner_Integrations_Offered</relationshipName>
    <type>Lookup</type>
</CustomField>