unpackaged/main/default/objects/Partner_Integration_Offered__c/fields/Media_Solution__c.field-meta.xml
<CustomField>
    <fullName>Media_Solution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes if the integration is intended for Media solutions</description>
    <label>Media Solution</label>
    <type>Checkbox</type>
</CustomField>