unpackaged/main/default/objects/Partner_Integration_Offered__c/fields/Primary_Support_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Support_Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The primary point of contact for support of the solution if used by a mutual customer, either at Brightcove, or the solution&#39;s vendor, or a 3rd party, such as a developer.</description>
    <label>Primary Support Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partner Integrations Supported</relationshipLabel>
    <relationshipName>Supported_Partner_Integrations</relationshipName>
    <type>Lookup</type>
</CustomField>