unpackaged/main/default/objects/Partner_Integration_Offered__c/fields/Solution_Categories__c.field-meta.xml
<CustomField>
    <fullName>Solution_Categories__c</fullName>
    <label>Solution Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessibility</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>AI and Video Enrichment</fullName>
            </value>
            <value>
                <fullName>Analytics</fullName>
            </value>
            <value>
                <fullName>Content and Social Syndication</fullName>
            </value>
            <value>
                <fullName>Content Management System</fullName>
            </value>
            <value>
                <fullName>Digital Asset Management</fullName>
            </value>
            <value>
                <fullName>DRM and Content Protection</fullName>
            </value>
            <value>
                <fullName>eCommerce Platform</fullName>
            </value>
            <value>
                <fullName>Enterprise Content Deliver</fullName>
            </value>
            <value>
                <fullName>Event Management Platform</fullName>
            </value>
            <value>
                <fullName>Interactive Video</fullName>
            </value>
            <value>
                <fullName>Live Streaming Hardware/Software</fullName>
            </value>
            <value>
                <fullName>LMS and Training Platform</fullName>
            </value>
            <value>
                <fullName>Marketing Automation Platforms</fullName>
            </value>
            <value>
                <fullName>OTT Platforms and Extensions</fullName>
            </value>
            <value>
                <fullName>Paywall, Subscriber Management and Payment Gateways</fullName>
            </value>
            <value>
                <fullName>Recommendations</fullName>
            </value>
            <value>
                <fullName>Video Conferencing</fullName>
            </value>
            <value>
                <fullName>Video Creation and Editing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>