unpackaged/main/default/objects/Partner_Integration_Offered__c/fields/Support_Policy__c.field-meta.xml
<CustomField>
    <fullName>Support_Policy__c</fullName>
    <description>Description of general support policy/process for the solution if used by a mutual customer.</description>
    <label>Support Policy</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>