unpackaged/main/default/objects/Partner_Integration_Offered__c/fields/Technology_Partner__c.field-meta.xml
<CustomField>
    <fullName>Technology_Partner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account that represents the organization that offers the solution (technology) that is integrated with Brightcove. Not the organization that built the integration (The Integrator).</description>
    <label>Technology Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Integrations (Offered) (Technology Partner)</relationshipLabel>
    <relationshipName>Partner_Integrations_Offered1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>